--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -38,5 +38,5 @@ production:
   database: blog_production
   pool: 5
   username: root
-  password:
+  password: password
   socket: /var/run/mysqld/mysqld.sock
